tests/invalid/covariant_owner_non_covariant_dependent.stderr
error[E0597]: `s` does not live long enough
  --> $DIR/covariant_owner_non_covariant_dependent.rs:19:16
   |
18 |     foo.with_dependent(|_, d| {
   |                        ------ value captured here
19 |         d.set(&s);
   |                ^ borrowed value does not live long enough
...
23 | }
   | -
   | |
   | `s` dropped here while still borrowed
   | borrow might be used here, when `foo` is dropped and runs the `Drop` code for type `Foo`
   |
   = note: values in a scope are dropped in the opposite order they are defined

error[E0505]: cannot move out of `s` because it is borrowed
  --> $DIR/covariant_owner_non_covariant_dependent.rs:21:10
   |
18 |     foo.with_dependent(|_, d| {
   |                        ------ borrow of `s` occurs here
19 |         d.set(&s);
   |                - borrow occurs due to use in closure
20 |     });
21 |     drop(s);
   |          ^ move out of `s` occurs here
22 |     foo.with_dependent(|_, d| println!("{}", d.get()));
   |     --- borrow later used here
